# storage/api-docs/api-docs.json
@@ -301,6 +301,66 @@
                     }
                 }
             }
+        },
+        "/api/auth/lista-candidatos-total-votos": {
+            "get": {
+                "tags": [
+                    "Candidatos"
+                ],
+                "summary": "Listado de candidatos con total de votos por lista",
+                "description": "Muestra un listado de los candidatos con la suma total de votos por lista.",
+                "operationId": "dc274efc8a558e537bfb929d136ea3b3",
+                "responses": {
+                    "200": {
+                        "description": "Listado de candidatos con total de votos por lista",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "lista_candidatos": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "idlista": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "nombre_candidato": {
+                                                        "type": "string",
+                                                        "example": "Nombre del candidato"
+                                                    },
+                                                    "total_votos": {
+                                                        "type": "integer",
+                                                        "example": 100
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error interno del servidor",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Mensaje de error"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
